<resources>
    <string name="app_name">Personal-Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_note">Notes</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_restaurant">Find a restaurant</string>
    <string name="title_money_management">Money management</string>
    <string name="title_else">else</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="hint_title">Please enter a title</string>
    <string name="hint_content">Please enter content</string>
    <string name="add">add</string>
    <string name="share">share</string>
    <string name="hint_location">Please enter location</string>
    <string name="hint_time_start">Please enter start time</string>
    <string name="hint_time_end">Pleas enter end time</string>
    <string name="hint_time">Time</string>
    <string name="hint_detailschedule_content_creator">Creator</string>
    <string name="hint_detailschedule_content_time">Time</string>
    <string name="hint_detailschedule_content_content">Content</string>
    <string name="hint_detailschedule_content_cost">Cost</string>
    <string name="hint_detailschedule_content_remark">Remark</string>
    <string name="hint_detailschedule_content_picture">Picture</string>
    <string name="delete">delete</string>
    <string name="see">see</string>
    <string name="編輯">edit</string>
    <string name="edit">edit</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_voice_rec">action voice rec</string>
    <string name="action_location">action location</string>
    <string name="action_taxi">action taxi</string>
    <string name="action_change_colors">change style</string>
    <string name="hint_cost">Please enter Cost</string>
    <string name="nav_all_activity">All Activity</string>
    <string name="nav_map">map</string>
    <string name="nav_personal_data">Personal Data</string>
    <string name="nav_home">Home</string>
</resources>
