<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_assignment_black"
            android:title="@string/title_note" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_perm_contact_calendar_black"
            android:title="@string/title_schedule" />
        <item
            android:id="@+id/nav_money_management"
            android:icon="@drawable/ic_euro_symbol_black"
            android:title="@string/title_money_management" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_restaurant_black"
            android:title="@string/title_restaurant" />
    </group>

    <item android:title="@string/title_else">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
