<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rainvisitor.personal_assistant.DetailScheduleFragmet.ContentFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_creator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                android:background="@color/grey_100"
                android:gravity="center"
                android:hint="@string/hint_detailschedule_content_creator"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="30sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/grey_400" />

            <TextView
                android:id="@+id/textview_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/grey_100"
                android:gravity="center"
                android:hint="@string/hint_detailschedule_content_time"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100">

            <TextView
                android:id="@+id/textview_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_100"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:gravity="center"
                android:hint="@string/hint_detailschedule_content_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                tools:text="內容" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_detailschedule_content_cost"
                android:textColorHint="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:hint="@string/hint_cost"
                android:gravity="center"
                android:id="@+id/textview_cost"
                android:textColor="@color/black"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:hint="@string/hint_detailschedule_content_remark"
                android:textColorHint="@color/black"
                android:textSize="25sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="無"
                android:textColor="@color/black"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_detailschedule_content_picture"
                android:textColorHint="@color/black"
                android:textSize="25dp"
                android:id="@+id/textview_picture"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleview_picture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/grey_400"
            android:id="@+id/line7"/>
    </LinearLayout>
</FrameLayout>
