<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rainvisitor.personal_assistant.DetailScheduleFragmet.AddFragment">

    <!-- TODO: Update blank fragment layout -->



    <LinearLayout
        android:id="@+id/linealayout_detailadd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100"
            android:orientation="horizontal"
            android:paddingBottom="1dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/grey_100"
                android:padding="5dp"
                android:src="@drawable/ic_assignment_black" />

            <EditText
                android:id="@+id/edittext_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_100"
                android:gravity="top"
                android:hint="@string/hint_title"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_dividers"
                android:textSize="24sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100"
            android:orientation="horizontal"
            android:paddingBottom="1dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/grey_100"
                android:padding="5dp"
                android:src="@drawable/ic_insert_comment_black_24dp"
                android:id="@+id/imageView3" />

            <EditText
                android:id="@+id/edittext_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_100"
                android:gravity="top"
                android:hint="@string/hint_content"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_dividers"
                android:textSize="24sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100"
            android:orientation="horizontal"
            android:paddingBottom="1dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/grey_100"
                android:padding="5dp"
                android:src="@drawable/ic_local_atm_black_24dp" />

            <EditText
                android:id="@+id/edittext_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_100"
                android:gravity="top"
                android:hint="@string/hint_cost"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_dividers"
                android:textSize="24sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:background="@color/grey_100"
            android:orientation="horizontal"
            android:paddingBottom="1dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/grey_100"
                android:padding="5dp"
                android:src="@drawable/ic_place_black_24dp" />

            <TextView
                android:id="@+id/textview_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_100"
                android:gravity="center"
                android:hint="@string/hint_location"
                android:padding="12dp"
                android:text="請選擇位置"
                android:textColor="@color/black"
                android:textColorHint="@color/black_dividers"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100"
            android:orientation="horizontal"
            android:paddingBottom="1dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="107dp"
                android:background="@color/grey_100"
                android:padding="5dp"
                android:src="@drawable/ic_timer_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_startdate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/grey_100"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_dividers"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textview_starttime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/grey_100"
                        android:hint="@string/hint_time"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_dividers"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_enddate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/grey_100"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_dividers"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textview_endtime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/grey_100"
                        android:hint="@string/hint_time"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black_dividers"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_400" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView_addpicture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_add_black" />

            <TextView
                android:id="@+id/textView_newpicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:text="新增照片"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_100" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleview_picture"
            android:layout_width="match_parent"
            android:scrollbars="horizontal"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/add" />
    </LinearLayout>
</FrameLayout>
